--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {font-size:16px;}
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Company Name</span>
+  <span>AuditBull</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -45,13 +45,13 @@ body {font-size:16px;}
     
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <img src="logos\AuditBull Horizontal Logo.svg" style="width:100%" onclick="onClick(this)" alt="AuditBull Logo">
+    <img src="logos\AuditBull Horizontal Logo.svg" style="width:100%" alt="AuditBull Logo">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Showcase.</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
   </div>
   
   <!-- Photo grid (modal) -->
-  <div class="w3-row-padding">
+  <!-- <div class="w3-row-padding">
     <div class="w3-half">
       <img src="/w3images/kitchenconcrete.jpg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
       <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
@@ -63,21 +63,23 @@ body {font-size:16px;}
       <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
       <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
     </div>
-  </div>
+  </div> -->
 
   <!-- Modal for full size images on click-->
-  <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
+  <!-- <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
     <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
     <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
       <img id="img01" class="w3-image">
       <p id="caption"></p>
     </div>
-  </div>
+  </div> -->
 
   <!-- Services -->
   <div class="w3-container" id="services" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Services.</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <iframe src="https://player.vimeo.com/video/646033466?h=367c9d4458" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/646033466">Last Stop For Lost Property</a> from <a href="https://vimeo.com/user5373842">Vicente Cueto</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
     <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
@@ -89,6 +91,7 @@ body {font-size:16px;}
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Designers.</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     <p>The best team in the world.</p>
     <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
