--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <style>
@@ -45,7 +46,7 @@ body {font-size:16px;}
     
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <img src="logos\AuditBull Horizontal Logo.svg" style="width:100%" alt="AuditBull Logo">
+    <img src="logos\AuditBull Horizontal Logo.svg" style="width:66%" alt="AuditBull Logo">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Showcase.</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
   </div>
