--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@ body {font-size:16px;}
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="la.jpg" alt="Los Angeles">
+        <img src="logos\AuditBull Vertical Logo.svg" alt="Los Angeles">
       </div>
   
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago">
+        <img src="logos\AuditBull White Vertical Logo.svg" alt="Chicago">
       </div>
   
       <div class="item">
-        <img src="ny.jpg" alt="New York">
+        <img src="logos\AuditBull Horizontal Logo.svg" alt="New York">
       </div>
     </div>
   
