--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body {font-size:16px;}
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Designers.</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-    <iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" width="860" height="484" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Auditbull Demo - Video 1.mov"></iframe>    <p>The best team in the world.</p>
+    <iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" width="75%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Auditbull Demo"></iframe>
     <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
     incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
