--- a/index.html
+++ b/index.html
@@ -200,16 +200,18 @@ body {font-size:16px;}
     <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
+    <!-- Calendly link widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
+    <!-- Calendly link widget end -->
   </div>
 
   <!-- About -->
   <div class="w3-container" id="about" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>About</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-      <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value" style="min-width:320px;height:666px;"></div>
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    <!-- Calendly inline widget end -->
+    <p>REPLACE ME!!!!!!!!!!!!!!11</p>
   </div>
 
 <!-- End page content -->
