--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {font-size:16px;}
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-xlarge w3-padding">
+<header class="w3-container mag-lightblue-bg w3-top w3-hide-large w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
   <span>AuditBull</span>
 </header>
