--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {font-size:16px;}
 <!-- Top menu on small screens -->
 <header class="w3-container mag-lightblue-bg w3-top w3-hide-large w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
-  <span>AuditBull</span>
+  <span><img src="logos\AuditBull White Horizontal Logo.svg" style="width:100%" alt="AuditBull Logo"></span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
