--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {font-size:16px;}
 <nav class="mag-lightblue-bg w3-sidebar w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64"><img src="logos\AuditBull White Horizontal Logo.svg" style="max-height:35px;float:right;" alt="AuditBull Logo"></h3>
+    <h3 class="w3-padding-64"><img src="logos\AuditBull White Horizontal Logo.svg" style="width:85%" alt="AuditBull Logo"></h3>
   </div>
   <div class="w3-bar-block">
     <a href="#scenario" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Scenario</a> 
@@ -36,7 +36,7 @@ body {font-size:16px;}
 <!-- Top menu on small screens -->
 <header class="w3-container mag-lightblue-bg w3-top w3-hide-large w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
-  <span><img src="logos\AuditBull White Horizontal Logo.svg" style="width:100%" alt="AuditBull Logo"></span>
+  <span><img src="logos\AuditBull White Horizontal Logo.svg" style="max-height:35px;float: right;" alt="AuditBull Logo"></span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
