--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Avenir", sans-serif}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
+.spacer{width: 100%;height: 68px;}
 </style>
 <body>
 
@@ -38,6 +39,10 @@ body {font-size:16px;}
   <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
   <span><img src="logos\AuditBull White Horizontal Logo.svg" style="max-height:35px;margin-left:auto;margin-right:auto;" alt="AuditBull Logo"></span>
 </header>
+
+<div class="w3-hide-large spacer">
+  &nbsp;
+</div>
 
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
