hide details calendly

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {font-size:16px;}
     
   <!-- Header -->
   <div class="w3-container" style="margin-top:20px" id="showcase">
-    <img src="logos\AuditBull Horizontal Logo.svg" style="width:66%" alt="AuditBull Logo">
+    <img src="logos\AuditBull Horizontal Logo.svg" style="width:66%;margin:auto;display:block;" alt="AuditBull Logo">
   </div>
   
   <!-- Photo grid (modal) -->
@@ -162,8 +162,8 @@ body {font-size:16px;}
 <div class="w3-container" id="connect" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Connect</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-      <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value" style="min-width:320px;height:666px;"></div>
+     <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1" style="min-width:320px;height:630px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
     <!-- Calendly link widget begin -->
