--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Connect</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
      <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1" style="min-width:320px;height:666px;"></div>
+    <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1?hide_landing_page_details=1" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
     <!-- Calendly link widget begin -->
