--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 <style>
 .mag-lightblue-bg {background: #005AFF; color: white}
 .mag-lightblue-text {color:#005AFF}
-body,h1,h2,h3,h4,h5 {font-family: "Avenir", sans-serif}
+body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
@@ -30,6 +33,7 @@ body {font-size:16px;}
     <a href="#solution" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Solution</a> 
     <a href="#demo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Demo</a> 
     <a href="#connect" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Connect</a>
+    <a href="#referral" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Referral</a>
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About</a>
   </div>
 </nav>
@@ -53,6 +57,8 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:20px" id="showcase">
     <img src="logos\AuditBull Horizontal Logo.svg" style="width:66%;margin:auto;display:block;" alt="AuditBull Logo">
+    <h4>Better. Faster. Sooner.</h4>
+    <p>AuditBull allows scaling organizations to obtain and retain customer trust by orchestrating Trust Services in the tools your team already knows how to use, all while paying for itself with bottom line savings</p>
   </div>
   
   <!-- Photo grid (modal) -->
@@ -171,6 +177,13 @@ body {font-size:16px;}
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
     <!-- Calendly link widget end -->
+  </div>
+
+  <!-- Referral -->
+  <div class="w3-container" id="referral" style="margin-top:75px">
+    <h1 class="w3-xxxlarge mag-lightblue-text"><b>Referral</b></h1>
+    <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <p>REPLACE ME!!!!!!!!!!!!!!11</p>
   </div>
 
   <!-- About -->
