--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:20px" id="showcase">
     <img src="logos\AuditBull Horizontal Logo.svg" style="width:66%;margin:auto;display:block;" alt="AuditBull Logo">
-    <h4>Better. Faster. Sooner.</h4>
-    <p>AuditBull allows scaling organizations to obtain and retain customer trust by orchestrating Trust Services in the tools your team already knows how to use, all while paying for itself with bottom line savings</p>
+    <h1>Better. Faster. Sooner.</h1>
+    <h4>AuditBull allows scaling organizations to obtain and retain customer trust by orchestrating Trust Services in the tools your team already knows how to use, all while paying for itself with bottom line savings</h4>
   </div>
   
   <!-- Photo grid (modal) -->
