--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style>
 .mag-lightblue-bg {background: #005AFF; color: white}
 .mag-lightblue-text {color:#005AFF}
-body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif}
+body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif; color: #083362}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
@@ -57,33 +57,10 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:20px" id="showcase">
     <img src="logos\AuditBull Horizontal Logo.svg" style="width:66%;margin:auto;display:block;" alt="AuditBull Logo">
-    <h1>Better. Faster. Sooner.</h1>
-    <h4>AuditBull allows scaling organizations to obtain and retain customer trust by orchestrating Trust Services in the tools your team already knows how to use, all while paying for itself with bottom line savings</h4>
+    <h1 style='margin:auto'>Better. Faster. Sooner.</h1>
+    <h4 style='margin:auto'>AuditBull allows scaling organizations to obtain and retain customer trust by orchestrating Trust Services in the tools your team already knows how to use, all while paying for itself with bottom line savings</h4>
   </div>
   
-  <!-- Photo grid (modal) -->
-  <!-- <div class="w3-row-padding">
-    <div class="w3-half">
-      <img src="/w3images/kitchenconcrete.jpg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
-      <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
-      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
-    </div>
-
-    <div class="w3-half">
-      <img src="/w3images/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
-      <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
-      <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
-    </div>
-  </div> -->
-
-  <!-- Modal for full size images on click-->
-  <!-- <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
-    <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-      <img id="img01" class="w3-image">
-      <p id="caption"></p>
-    </div>
-  </div> -->
 
   <!-- Scenario -->
   <div class="w3-container" id="scenario" style="margin-top:75px">
