--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ body {font-size:16px;}
   <div class="w3-container" id="scenario" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Scenario</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <p>Companies building B2B or B2B2C digital platforms are caught in a catch-22 when it comes to Customer Trust.
+
+      Without commercial validation of your product in regulated industries, its not feasible for most organizations to develop a security and compliance program that can deliver against industry expectations such as SOC2 or HITRUST.
+      
+      However, once there is a customer demand for satisfactory cybersecurity responses to questionnaires or Audit attestations, it becomes a significant roadblock to winning strategic customers.
+      </p>
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
