--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="#scenario" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Scenario</a> 
-    <a href="#solution" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Solution</a> 
+    <a href="#pitch" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Pitch</a> 
     <a href="#demo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Demo</a> 
     <a href="#connect" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Connect</a>
     <a href="#referral" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Referral</a>
@@ -76,10 +76,15 @@ body {font-size:16px;}
 
 
   
-  <!-- solution -->
-  <div class="w3-container" id="solution" style="margin-top:75px">
-    <h1 class="w3-xxxlarge mag-lightblue-text"><b>Solution</b></h1>
+  <!-- pitch -->
+  <div class="w3-container" id="pitch" style="margin-top:75px">
+    <h1 class="w3-xxxlarge mag-lightblue-text"><b>The Pitch</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <p>
+      As a scaling start-up or mid size enterprise, it is difficult to implement cybersecurity and compliance processes that can pass SOC2, HIPAA, and HITRUST audit requirements without breaking the bank or risking product development slowdown. <br>
+      AuditBull is built to eliminate waste and frustration using our Trust ChatBot to orchestrate and track compliance activities. <br>
+      Unlike other compliance platforms, we make doing the work simple, not just tracking it. <br>
+    </p>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
