--- a/index.html
+++ b/index.html
@@ -173,8 +173,13 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Referral</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
     <a name="form595930589" id="formAnchor595930589"></a>
-<script src="https://fs25.formsite.com/include/form/embedManager.js?595930589">
-<script>EmbedManager.embed({key: "https://fs25.formsite.com/res/showFormEmbed?EParam=m_OmK8apOTBL7yG7D77if2rYe2Y6sJfY&595930589",width: "100%"});</script>
+    <script src="https://fs25.formsite.com/include/form/embedManager.js?595930589"></script>
+    <script type="text/javascript">
+      EmbedManager.embed({
+      key: "https://fs25.formsite.com/res/showFormEmbed?EParam=m_OmK8apOTBL7yG7D77if2rYe2Y6sJfY&595930589",
+      width: "100%"
+      });
+    </script>
   </div>
 
   <!-- About -->
@@ -207,6 +212,7 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 </script>
+    
 
 </body>
 </html>
