--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><img src="logos\AuditBull White Horizontal Logo.svg" style="width:85%" alt="AuditBull Logo"></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#scenario" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Scenario</a> 
+    <a href="#scenario" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Scenario</a> 
     <a href="#pitch" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Pitch</a> 
     <a href="#demo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Demo</a> 
     <a href="#connect" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Connect</a>
@@ -64,7 +64,7 @@ body {font-size:16px;}
 
   <!-- Scenario -->
   <div class="w3-container" id="scenario" style="margin-top:75px">
-    <h1 class="w3-xxxlarge mag-lightblue-text"><b>Scenario</b></h1>
+    <h1 class="w3-xxxlarge mag-lightblue-text"><b>The Scenario</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
     <p>
       Companies building B2B or B2B2C digital platforms are caught in a catch-22 when it comes to Customer Trust.<br>
@@ -164,7 +164,7 @@ body {font-size:16px;}
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
     <!-- Calendly link widget end -->
-    <div><button onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'">Join us on <img src="logos\slack_trans.png" alt="Slack"></button></div>
+    <div><button onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h4>Join us on</h4><img src="logos\slack_trans.png" style="width: 50px;" alt="Slack"></button></div>
     
   </div>
 
