--- a/index.html
+++ b/index.html
@@ -19,6 +19,34 @@ body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 .spacer{width: 100%;height: 68px;}
+.button-36 {
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  height: 4rem;
+  padding: 0 1.6rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-36:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+
+@media (min-width: 768px) {
+  .button-36 {
+    padding: 0 2.6rem;
+  }
+}
 </style>
 <body>
 
@@ -164,7 +192,7 @@ body {font-size:16px;}
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
     <!-- Calendly link widget end -->
-    <div><button onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h4>Join us on</h4><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
+    <div><button class="button-36" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h4>Join us on</h4><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
     
   </div>
 
