--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body {font-size:16px;}
 /* CSS */
 .button-56 {
   align-items: center;
-  background-color: #fee6e3;
-  border: 2px solid #111;
+  background-color: white;
+  border: 2px solid #521754;
   border-radius: 8px;
   box-sizing: border-box;
   color: #111;
@@ -43,7 +43,7 @@ body {font-size:16px;}
 }
 
 .button-56:after {
-  background-color: #111;
+  background-color: #521754;
   border-radius: 8px;
   content: "";
   display: block;
@@ -219,7 +219,7 @@ body {font-size:16px;}
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
     <!-- Calendly link widget end -->
-    <div><button class="button-36" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h4>Join us on</h4><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
+    <div><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h4>Join us on</h4><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
     
   </div>
 
