--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 <style>
+* {background-color: #EFF0F1}
 .mag-lightblue-bg {background: #005AFF; color: white}
 .mag-lightblue-text {color:#005AFF}
 body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif; color: #083362}
@@ -219,7 +220,7 @@ body {font-size:16px;}
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
     <!-- Calendly link widget end -->
-    <div><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h4>Join us on</h4><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
+    <div><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
     
   </div>
 
