small white changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 <style>
 * {background-color: #EFF0F1}
-.mag-lightblue-bg {background: #005AFF; color: white}
+.mag-lightblue-bg {background: #005AFF; color: #EFF0F1}
 .mag-lightblue-text {color:#005AFF}
 body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif; color: #083362}
 body {font-size:16px;}
@@ -24,7 +24,7 @@ body {font-size:16px;}
 /* CSS */
 .button-56 {
   align-items: center;
-  background-color: white;
+  background-color: #EFF0F1;
   border: 2px solid #521754;
   border-radius: 8px;
   box-sizing: border-box;
@@ -62,7 +62,7 @@ body {font-size:16px;}
 }
 
 .button-56:active {
-  background-color: #ffdeda;
+  background-color: #EFF0F1;
   outline: 0;
 }
 
