--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 * {background-color: #EFF0F1}
 .mag-lightblue-bg {background: #005AFF; color: #EFF0F1}
 .mag-lightblue-text {color:#005AFF}
-body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif; color: #083362}
+body,h1,h2,h3,h4,h5,li {font-family: "Lato", sans-serif; color: #083362}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
@@ -122,11 +122,12 @@ body {font-size:16px;}
   <div class="w3-container" id="scenario" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>The Scenario</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-    <p>
-      Companies building B2B or B2B2C digital platforms are caught in a catch-22 when it comes to Customer Trust.<br>
-      Without commercial validation of your product in regulated industries, its not feasible for most organizations to develop a security and compliance program that can deliver against industry expectations such as SOC2 or HITRUST.<br>
-      However, once there is a customer demand for satisfactory cybersecurity responses to questionnaires or Audit attestations, it becomes a significant roadblock to winning strategic customers.<br>
-    </p>
+    <h3>Understanding the Customer Trust “Catch-22”</h3>
+    <ul>
+      <li>It is difficult to anticipate when Security and Compliance will become important to <b>winning new business</b></li>
+      <li>Altering <b>existing processes</b> to accommodate compliance requirements is <b>frustrating</b> and <b>time-consuming</b></li>
+      <li>Obtaining SOC2, HIPAA, or HITRUST certification takes significant time to prepare for</li>
+    </ul>
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
