--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 <style>
-* {background-color: #EFF0F1}
+body {background-color: #EFF0F1}
 .mag-lightblue-bg {background: #005AFF; color: #EFF0F1}
 .mag-lightblue-text {color:#005AFF}
 body,h1,h2,h3,h4,h5,li {font-family: "Lato", sans-serif; color: #083362}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
-.spacer{width: 100%;height: 68px;}
+.spacer{width: 100%;height: 68px;background: #EFF0F1;}
 
 /* CSS */
 .button-56 {
