--- a/index.html
+++ b/index.html
@@ -218,13 +218,12 @@ body {font-size:16px;}
     <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1?hide_landing_page_details=1" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
-    <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>
     <!-- Calendly link widget begin -->
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-    <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;">If you'd like to join us at our AWS Re:Invent Launch Party 11/30 at Senor Frogs in Las Vegas, Click Here!</a>
+    <div class="flex-wrapper"><button class="button-56" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;"><h4>Click here to join us at our AWS Re:Invent Launch Party 11/30/21 at Senor Frogs in Las Vegas!</h4></button></div>
     <!-- Calendly link widget end -->
-    
+    <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>  
   </div>
 
   <!-- Referral -->
