--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {font-size:16px;}
     <ul>
       <li>It is difficult to anticipate when Security and Compliance will become important to <b>winning new business</b></li>
       <li>Altering <b>existing processes</b> to accommodate compliance requirements is <b>frustrating</b> and <b>time-consuming</b></li>
-      <li>Obtaining SOC2, HIPAA, or HITRUST certification takes significant time to prepare for</li>
+      <li><b>Obtaining</b> SOC2, HIPAA, or HITRUST <b>certification</b> takes <b>significant time</b></li>
     </ul>
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
@@ -139,11 +139,12 @@ body {font-size:16px;}
   <div class="w3-container" id="pitch" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>The Pitch</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-    <p>
-      As a scaling start-up or mid size enterprise, it is difficult to implement cybersecurity and compliance processes that can pass SOC2, HIPAA, and HITRUST audit requirements without breaking the bank or risking product development slowdown. <br>
-      AuditBull is built to eliminate waste and frustration using our Trust ChatBot to orchestrate and track compliance activities. <br>
-      Unlike other compliance platforms, we make doing the work simple, not just tracking it. <br>
-    </p>
+    <h3>AuditBull Delivers:​</h3>
+    <ul>
+      <li>BETTER Outcomes through elimination of <b>financial waste</b></li>
+      <li>FASTER Execution through ChatBot automation and <b> elimination of manual processes </b></li>
+      <li>Achieve <b> compliance targets</b> SOONER with pre-built Trust processes</li>
+    </ul>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -205,6 +206,13 @@ body {font-size:16px;}
   <div class="w3-container" id="demo" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Demo</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <h3>See how easy it is to use AuditBull:​</h3>
+    <ul>
+      <li>Administer and track <b>Access Reviews</b> </li>​
+      <li><b>Simple user response </b> which requires <b>no training</b></li>​
+      <li>Feel the power of <b>Human In The Loop </b> (HITL) automation</li>
+    </ul>
+
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
