--- a/index.html
+++ b/index.html
@@ -255,7 +255,10 @@ body {font-size:16px;}
   <div class="w3-container" id="about" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>About</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-    <p>REPLACE ME!!!!!!!!!!!!!!11</p>
+    <p>AuditBull is a member of a new class of <b>business process solutions </b> known as ChatOps.​<br><br>
+      ChatOps delivers a 10x improvement in <b>organizational communication </b> and <b>process visibility</b> in the same way that DevOps has for infrastructure delivery​<br><br>
+      AuditBull leverages this new business paradigm which leverages tools that your <b>teams are already familiar </b> with to make execution of the cybersecurity and compliance obligations as <b>simple, straightforward, and impactful </b> as possible​<br><br>
+      Customer Trust – As your partner in delivering Trust Services at your organization, we look forward to discussing our own security program while we progress towards obtaining our SOC2 attestation in 2022</p>
   </div>
 
 <!-- End page content -->
