--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
     <h3>AuditBull Delivers:​</h3>
     <ul>
-      <li>BETTER Outcomes through elimination of <b>financial waste</b></li>
-      <li>FASTER Execution through ChatBot automation and <b> elimination of manual processes </b></li>
-      <li>Achieve <b> compliance targets</b> SOONER with pre-built Trust processes</li>
+      <li><b>BETTER Outcomes</b> through elimination of financial waste</li>
+      <li><b>FASTER Execution</b> through ChatBot automation and elimination of manual processes</li>
+      <li><b>Achieve</b> compliance targets <b>SOONER</b> with pre-built Trust processes</li>
     </ul>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
