--- a/index.html
+++ b/index.html
@@ -223,19 +223,28 @@ body {font-size:16px;}
 <div class="w3-container" id="connect" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Connect</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-    <h2>We are excited to conduct a complimentary <b>Proof of Value</b> that ensures you can validate every statement and ensure AuditBull will be <b>successful in your organization</b></h2>
-    <h3>Schedule a demo with you and your key stakeholders</h3>
+    <h4>We are excited to conduct a complimentary <b>Proof of Value</b> that ensures you can validate every statement and ensure AuditBull will be <b>successful in your organization</b></h4>
+    <div class="spacer">
+      &nbsp;
+    </div>
+    <h3>1. Schedule a demo with us</h3>
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1?hide_landing_page_details=1" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
+    <div class="spacer">
+      &nbsp;
+    </div>
+    <h3>2. Join our public Slack channel and experience AuditBull on your device</h3>
+    <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>  
+    <div class="spacer">
+      &nbsp;
+    </div>
     <!-- Calendly link widget begin -->
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <div class="flex-wrapper"><button class="button-56" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;"><h4>Click here to join us at our AWS Re:Invent Launch Party 11/30/21 at Senor Frogs in Las Vegas!</h4></button></div>
     <!-- Calendly link widget end -->
-    <h3>Join our public Slack channel and experience AuditBull on your device</h3>
-    <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>  
   </div>
 
   <!-- Referral -->
