--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@ body {font-size:16px;}
       <li>Feel the power of <b>Human In The Loop </b> (HITL) automation</li>
     </ul>
 
+    <ul>
+      <li><b>BETTER Outcomes</b> through elimination of financial waste</li>
+      <li><b>FASTER Execution</b> through ChatBot automation and elimination of manual processes</li>
+      <li><b>Achieve</b> compliance targets <b>SOONER</b> with pre-built Trust processes</li>
+    </ul>
+
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
